# trade_manager

./: .env  CHANGELOG.md  FUTUREWORK.md  README.md  pyproject.toml  scripts.py
.github/workflows/: trade_manager-docker-image-publish.yaml
docker/: Dockerfile
etc/: daemon.json
tests/: configs.py  test_main.py
trade_manager/: __init__.py  __main__.py  configs.py  ex_manager.py  ex_telegram_bot.py  version.json  version.py
